--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,15 @@
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="list_item_padding">15dp</dimen>
+	<dimen name="text_size_document_title">18sp</dimen>
+	<dimen name="text_size_document_subtitle">14sp</dimen>
+	<dimen name="element_space_narrow">5dp</dimen>
+	<dimen name="element_space_medium">10dp</dimen>
+	<dimen name="element_space_large">15dp</dimen>
+	<dimen name="tool_icon_size">20dp</dimen>
+	<dimen name="tool_button_side">30dp</dimen>
+	<dimen name="text_medium">20sp</dimen>
+	<dimen name="text_small">15sp</dimen>
+	<dimen name="element_space_extra_large">20dp</dimen>
 </resources>
