--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,31 @@
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
+		<item name="windowActionModeOverlay">true</item>
+		<item name="android:windowBackground">@color/white</item>
+
+		<!--hide the default action bar-->
+		<item name="windowActionBar">false</item>
+		<item name="windowNoTitle">true</item>
+
+		<item name="colorControlNormal">@color/gray_light</item>
+		<item name="colorControlActivated">@color/gray_lighter</item>
+		<item name="colorControlHighlight">@color/gray_dark</item>
+
+		<item name="alertDialogTheme">@style/CustomAlertDialog</item>
+		<item name="android:alertDialogTheme">@style/CustomAlertDialog</item>
 	</style>
+
+	<style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+		<!-- Used for the buttons -->
+		<item name="colorAccent">#0099cc</item>
+		<!-- Used for the title and text -->
+		<item name="android:textColorPrimary">#555</item>
+		<!-- Used for the background -->
+		<item name="android:background">#fff</item>
+
+		<item name="android:textCursorDrawable">@null</item>
+	</style>
+
 
 </resources>
